# SDL-Tutorial-for-your-Android-Projects

./: README.md  main.cpp
SDL/: .gitignore  CMakeLists.txt  build.gradle  local.properties  settings.gradle
SDL/app/: build.gradle
SDL/app/libs/: SDL3_image-3.2.0.aar
SDL/app/src/main/java/com/example/sdlcross/: MyActivity.java
SDL/app/src/main/jni/: Application.mk
SDL/app/src/main/jni/src/: main.c
SDL/gradle/wrapper/: gradle-wrapper.properties
